Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -3800,7 +3800,7 @@
     "We decided to not submit our stats model because as seen above the RMSE for the training data is already quite high. Even after we removed days from our dates the stats model presented us with errors about the date:\"PatsyError:numbers besides '0' and '1' are only allowed with**\". It also did not recognise this column(\"Province_W.CAPE-BERGRIVER_ETC\")which the other models we instantiated did not have same errors that stats models presented. Our data for this model ended up being vastly different from the data we trained the other models on."
    ]
   },
-  {
+   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3809,14 +3809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3825,38 +3818,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 81,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Instantiate support vector regression model\n",
-    "sv_reg_test = SVR(kernel='rbf', gamma='auto')"
+    "#### Building and fitting the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate support vector regression model\n",
+    "sv_reg_train = SVR(kernel='rbf', gamma='auto')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SVR(gamma='auto')"
+       "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='auto',\n",
+       "    kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sv_reg_test.fit(X_train,y_train)\n"
+    "sv_reg_train.fit(X_train,y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Assess our results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -3868,23 +3876,29 @@
     }
    ],
    "source": [
-    "y_pred = sv_reg_test.predict(X_test)\n",
+    "y_pred = sv_reg_train.predict(X_test)\n",
     "print(\"RMSE: \", np.sqrt(mean_squared_error(y_test,y_pred)))\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 84,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Making the prediction\n",
-    "Z_submission = sv_reg_test.predict(test_submission_set)"
+    "### Making the prediction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Z_submission = sv_reg_train.predict(test_submission_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3896,7 +3910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3906,7 +3920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -3973,7 +3987,7 @@
        "4      5          7.054618"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3984,7 +3998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3996,12 +4010,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "It is clear that the prediction based on support vector regression method is quite accurate and it is more efficient in minimizing the error of the regression model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 5.5. Multivariate regression model using sklearn.decisiontreeregressor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4010,38 +4031,64 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 92,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Instantiate regression tree model\n",
-    "regr_tree_test = DecisionTreeRegressor(max_depth=3)"
+    "We begin with all of our training data at the root node and then partition the data into smaller subsets which form the branches."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate regression tree model\n",
+    "regr_tree = DecisionTreeRegressor(max_depth=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DecisionTreeRegressor(max_depth=3)"
+       "DecisionTreeRegressor(criterion='mse', max_depth=3, max_features=None,\n",
+       "                      max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "                      min_impurity_split=None, min_samples_leaf=1,\n",
+       "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "                      presort=False, random_state=None, splitter='best')"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "regr_tree_test.fit(X_train,y_train)"
+    "regr_tree.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We evaluate model performance by calculating how close its predictions on the unseen x_test observations are to the actual output y_test.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Evaluating the model perfomance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -4053,13 +4100,20 @@
     }
    ],
    "source": [
-    "y_pred = regr_tree_test.predict(X_test)\n",
+    "y_pred = regr_tree.predict(X_test)\n",
     "print(\"RMSE: \", np.sqrt(mean_squared_error(y_test,y_pred)))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The RMSE for the Decesion Tree model is higher than the RMSE. This shows that the residuals for the Decesion tree model are more  spread out."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4071,7 +4125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4081,7 +4135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -4113,52 +4167,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>8.788168</td>\n",
+       "      <td>8.788152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>9.139664</td>\n",
+       "      <td>9.139640</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>8.428122</td>\n",
+       "      <td>8.428095</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>7.708810</td>\n",
+       "      <td>7.708782</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>8.301543</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>4.395979</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>4.970963</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>7.703868</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>8.429640</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>8.358508</td>\n",
+       "      <td>8.301538</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4166,251 +4195,171 @@
       ],
       "text/plain": [
        "   Index  avg_price_per_kg\n",
-       "0      1          8.788168\n",
-       "1      2          9.139664\n",
-       "2      3          8.428122\n",
-       "3      4          7.708810\n",
-       "4      5          8.301543\n",
-       "5      6          4.395979\n",
-       "6      7          4.970963\n",
-       "7      8          7.703868\n",
-       "8      9          8.429640\n",
-       "9     10          8.358508"
+       "0      1          8.788152\n",
+       "1      2          9.139640\n",
+       "2      3          8.428095\n",
+       "3      4          7.708782\n",
+       "4      5          8.301538"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "DT_submission_DF.head(10)"
+    "DT_submission_DF.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Saving the DataFrame as as csv\n",
-    "DT_submission_DF.to_csv(r'DT_submission_DF.csv', index = False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5.6 Ensemble model: Voting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Importing the voting regressor from sklearn.ensemble\n",
-    "from sklearn.ensemble import VotingRegressor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Stating the models that will be included in our ensemble module as a list of tuples\n",
-    "models = [(\"LR\",LR_train),(\"DT\",regr_tree_test),(\"SVR\",sv_reg_test)]\n",
-    "\n",
-    "#Specifying weights for weighted model averaging\n",
-    "model_weightings = np.array([0.4,0.4,0.2])\n",
-    "v_reg = VotingRegressor(estimators=models,weights=model_weightings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Index</th>\n",
+       "      <th>avg_price_per_kg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>155</th>\n",
+       "      <td>156</td>\n",
+       "      <td>10.536797</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "VotingRegressor(estimators=[('LR', LinearRegression()),\n",
-       "                            ('DT', DecisionTreeRegressor(max_depth=3)),\n",
-       "                            ('SVR', SVR(gamma='auto'))],\n",
-       "                weights=array([0.4, 0.4, 0.2]))"
+       "     Index  avg_price_per_kg\n",
+       "155    156         10.536797"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Fitting the ensemble model with train data\n",
-    "v_reg.fit(X_train,y_train)\n"
+    "DT_submission_DF[DT_submission_DF['avg_price_per_kg']==DT_submission_DF['avg_price_per_kg'].max()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE:  1.29247818900736\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Index</th>\n",
+       "      <th>avg_price_per_kg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>186</td>\n",
+       "      <td>0.249845</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Index  avg_price_per_kg\n",
+       "185    186          0.249845"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Predicting the y variable for out test data\n",
-    "#Printing the RMSE of the ensemble method\n",
-    "y_pred = v_reg.predict(X_test)\n",
-    "print(\"RMSE: \", np.sqrt(mean_squared_error(y_test,y_pred)))"
+    "DT_submission_DF[DT_submission_DF['avg_price_per_kg']==DT_submission_DF['avg_price_per_kg'].min()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Making the prediction\n",
-    "y_submission = v_reg.predict(test_submission_set)"
+    "# The "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Minimizing the effect of outliers\n",
-    "i = 0 \n",
-    "for prediction in y_submission:\n",
-    "    if prediction < 0.25:\n",
-    "        y_submission[i] == 0.25\n",
-    "    elif prediction > 15:\n",
-    "        y_submission[i] == 15\n",
-    "    i += 1 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Creating an index list\n",
     "index_list = []\n",
     "for i in range(1,686):\n",
-    "    index_list.append(i)\n",
-    "    "
+    "    index_list.append(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 137,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Index</th>\n",
-       "      <th>avg_price_per_kg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>7.681001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>8.494440</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>7.851809</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>8.057820</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>7.984039</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Index  avg_price_per_kg\n",
-       "0      1          7.681001\n",
-       "1      2          8.494440\n",
-       "2      3          7.851809\n",
-       "3      4          8.057820\n",
-       "4      5          7.984039"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Putting the predictions with the index in a DataFrame\n",
-    "ensemble_sub_DF = pd.DataFrame({'Index':index_list, 'avg_price_per_kg': y_submission})\n",
-    "ensemble_sub_DF.head()"
+    "DT_submission_DF = pd.DataFrame({'Index':index_list, 'avg_price_per_kg': y_submission})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Saving the DataFrame as as csv\n",
-    "ensemble_sub_DF.to_csv('Ensemble_Submission.csv', index = False)"
+    "DT_submission_DF.to_csv(r'DT_submission_DF.csv', index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#saving the Dataframe after removing the outliers\n",
-    "ensemble_sub_DF.to_csv('Ensemble_Submission2.csv', index = False)"
-   ]
-  },
+   },
   {
    "cell_type": "markdown",
    "metadata": {},
