--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -164,7 +164,7 @@
        "1      2              1.30"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1697,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1990,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2004,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2216,7 +2216,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2245,7 +2245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2500,7 +2500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -2714,7 +2714,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2755,7 +2755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2765,7 +2765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2776,7 +2776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -2785,7 +2785,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-45-b5fb8fa7fd98>:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "<ipython-input-15-b5fb8fa7fd98>:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
       "  X_train80, X_test, y_train80, y_test = np.array(train_test_split(X, y, test_size=0.2, random_state=50))\n"
      ]
     }
@@ -2796,7 +2796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3080,7 +3080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3090,7 +3090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3100,7 +3100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -3111,7 +3111,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3123,14 +3123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Intercept: -182678892.46389794\n"
+      "Intercept: -113901350.62623546\n"
      ]
     }
    ],
@@ -3142,7 +3142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -3172,31 +3172,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Weight_Kg</th>\n",
-       "      <td>6.089297e+07</td>\n",
+       "      <td>3.796712e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_Qty_Sold</th>\n",
-       "      <td>-1.126432e-04</td>\n",
+       "      <td>-1.124083e-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Stock_On_Hand</th>\n",
-       "      <td>-7.112851e-05</td>\n",
+       "      <td>-7.116367e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Province_EASTERN_CAPE</th>\n",
-       "      <td>-1.499327e+00</td>\n",
+       "      <td>-1.499328e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Province_NATAL</th>\n",
-       "      <td>-2.541176e+00</td>\n",
+       "      <td>-2.541178e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Province_ORANGE_FREE_STATE</th>\n",
-       "      <td>-1.988664e+00</td>\n",
+       "      <td>-1.988663e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Province_TRANSVAAL</th>\n",
-       "      <td>-1.134292e+00</td>\n",
+       "      <td>-1.134287e+00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3204,16 +3204,16 @@
       ],
       "text/plain": [
        "                             Coefficient\n",
-       "Weight_Kg                   6.089297e+07\n",
-       "Total_Qty_Sold             -1.126432e-04\n",
-       "Stock_On_Hand              -7.112851e-05\n",
-       "Province_EASTERN_CAPE      -1.499327e+00\n",
-       "Province_NATAL             -2.541176e+00\n",
-       "Province_ORANGE_FREE_STATE -1.988664e+00\n",
-       "Province_TRANSVAAL         -1.134292e+00"
+       "Weight_Kg                   3.796712e+07\n",
+       "Total_Qty_Sold             -1.124083e-04\n",
+       "Stock_On_Hand              -7.116367e-05\n",
+       "Province_EASTERN_CAPE      -1.499328e+00\n",
+       "Province_NATAL             -2.541178e+00\n",
+       "Province_ORANGE_FREE_STATE -1.988663e+00\n",
+       "Province_TRANSVAAL         -1.134287e+00"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3233,7 +3233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3244,14 +3244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The RMSE of the test data is: 1.3836479603516267\n"
+      "The RMSE of the test data is: 1.3836505142883118\n"
      ]
     }
    ],
@@ -3271,7 +3271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3281,7 +3281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3297,7 +3297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3309,7 +3309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3416,12 +3416,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The Ordinary Least Squares Model is a statistical method of analysis that estimates the relationship between one or more indepedent variables and a dependent variable.The model estimates this relationship by minimizing the difference between the observed values and the predicted values.This difference is a representation of how far our predictions are to the information in our data, this difference is called the Residual Sum of Squares. The lower the Residual Sum of Squares is, the closer our predictions are to the truth displayed in our data. The metric that will be used in this model to assess how far our predictions deviate from the observed data is called the Root Mean Square error, which is the stanadard deviation of the residuals."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Build and train the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3438,7 +3445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3448,7 +3455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3459,7 +3466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
    "metadata": {
     "scrolled": false
    },
@@ -3470,7 +3477,7 @@
        "'avg_price_per_kg ~ Weight_Kg+Total_Qty_Sold+Stock_On_Hand+Province_EASTERN_CAPE+Province_NATAL+Province_ORANGE_FREE_STATE+Province_TRANSVAAL+Province_WEST_COAST+Container_DT063+Container_EC120+Container_EF120+Container_EG140+Container_IA400+Container_JE090+Container_JG110+Container_M4183+Container_M6125+Container_M9125+Size_Grade_1M+Size_Grade_1S+Size_Grade_1U+Size_Grade_1X+Size_Grade_2L+Size_Grade_2M+Size_Grade_2S+Size_Grade_2U+Size_Grade_2X'"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3707,7 +3714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3717,7 +3724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3800,7 +3807,7 @@
     "We decided to not submit our stats model because as seen above the RMSE for the training data is already quite high. Even after we removed days from our dates the stats model presented us with errors about the date:\"PatsyError:numbers besides '0' and '1' are only allowed with**\". It also did not recognise this column(\"Province_W.CAPE-BERGRIVER_ETC\")which the other models we instantiated did not have same errors that stats models presented. Our data for this model ended up being vastly different from the data we trained the other models on."
    ]
   },
-   {
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3809,7 +3816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3826,7 +3833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3836,17 +3843,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='auto',\n",
-       "    kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)"
+       "SVR(gamma='auto')"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3864,7 +3870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3889,7 +3895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3898,7 +3904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3910,7 +3916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4022,7 +4028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4039,7 +4045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4049,20 +4055,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DecisionTreeRegressor(criterion='mse', max_depth=3, max_features=None,\n",
-       "                      max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
-       "                      min_impurity_split=None, min_samples_leaf=1,\n",
-       "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-       "                      presort=False, random_state=None, splitter='best')"
+       "DecisionTreeRegressor(max_depth=3)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4088,7 +4090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -4113,7 +4115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4125,7 +4127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4330,7 +4332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4359,7 +4361,7 @@
     "#Saving the DataFrame as as csv\n",
     "DT_submission_DF.to_csv(r'DT_submission_DF.csv', index = False)"
    ]
-   },
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -4368,8 +4370,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ensemble models combine other models to minimize the variance of the individual models and improve the overall perfomance. The Ensemble Voting model is a heterogeneous model, these types of models ae able to combine different types of models, in our case, Linear, SVR and Decision Tree models. The Voting ensemble was chosen because it we can adjust the weight that each model hold, thus pitting less weight on models that perform poorly and maximizing the advantages of the better performing models. The voting model gets the average of the performance of all our contributing models by considering the Root Mean Square Error of each individual model. The Root Mean Square Error of the Voting model is the average Root Mean Square Error of all the models utilized."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4379,12 +4388,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Stating the models that will be included in our ensemble module as a list of tuples\n",
-    "models = [(\"LR\",LR_train),(\"DT\",regr_tree),(\"SVR\",sv_reg)]\n",
+    "models = [(\"LR\",LR_train),(\"DT\",regr_tree),(\"SVR\",sv_reg_train)]\n",
     "\n",
     "#Specifying weights for weighted model averaging\n",
     "model_weightings = np.array([0.4,0.4,0.2])\n",
@@ -4393,9 +4402,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VotingRegressor(estimators=[('LR', LinearRegression()),\n",
+       "                            ('DT', DecisionTreeRegressor(max_depth=3)),\n",
+       "                            ('SVR', SVR(gamma='auto'))],\n",
+       "                weights=array([0.4, 0.4, 0.2]))"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Fitting the ensemble model with train data\n",
     "v_reg.fit(X_train,y_train)\n"
@@ -4403,14 +4426,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE:  1.292479140417022\n"
+     ]
+    }
+   ],
    "source": [
     "#Predicting the y variable for out test data\n",
     "#Printing the RMSE of the ensemble method\n",
     "y_pred = v_reg.predict(X_test)\n",
     "print(\"RMSE: \", np.sqrt(mean_squared_error(y_test,y_pred)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Root Mean Square Error for the training Data is lower than that of each individual model, This shows that the Voting Ensemble model does indeed minimize the variance and improve overall performace."
    ]
   },
   {
