Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -5445,7 +5445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Building and fitting the model"
+    "#### 5.2.1. Building and fitting the model"
    ]
   },
   {
@@ -5598,7 +5598,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Assess our results"
+    "#### 5.2.2. Assessing our results"
    ]
   },
   {
@@ -5636,7 +5636,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Making predictions on the test data"
+    "#### 5.2.3. Making predictions on the test data"
    ]
   },
   {
@@ -5772,7 +5772,7 @@
    "outputs": [],
    "source": [
     "#Saving the DataFrame as as csv\n",
-    "LR_submission_DF.to_csv(r'LR5_submission_DF.csv', index = False)"
+    "LR_submission_DF.to_csv(r'LR_submission_DF.csv', index = False)"
    ]
   },
   {
@@ -6198,7 +6198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Building and fitting the model"
+    "#### 5.4.1. Building and fitting the model"
    ]
   },
   {
@@ -6235,7 +6235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Assess our results"
+    "#### 5.4.2. Assess our results"
    ]
   },
   {
@@ -6260,7 +6260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Making the prediction"
+    "#### 5.4.3. Making the prediction on the test data"
    ]
   },
   {
@@ -6480,7 +6480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The RMSE for the Decesion Tree model is higher than the RMSE. This shows that the residuals for the Decesion tree model are more  spread out."
+    "The RMSE for the Decision Tree model is higher than the RMSE. This shows that the residuals for the Decision Tree model are more  spread out."
    ]
   },
   {
