Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -6177,7 +6177,7 @@
     "We decided to not submit our stats model because as seen above the RMSE for the training data is already quite high. Even after we removed days from our dates the stats model presented us with errors about the date:\"PatsyError:numbers besides '0' and '1' are only allowed with**\". It also did not recognise this column(\"Province_W.CAPE-BERGRIVER_ETC\")which the other models we instantiated did not have same errors that stats models presented. Our data for this model ended up being vastly different from the data we trained the other models on."
    ]
   },
-  {
+ {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -6185,8 +6185,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SVR tries to find a line/hyperplane (in multidimensional space) that separates two classes. Then it classifies the new point depending on whether it lies on the positive or negative side of the hyperplane depending on the classes to predict.\n",
+    "\n",
+    "Consider  two  lines as the decision boundary and another line in between the two lines as the hyperplane. Our objective is to basically consider the points that are within the decision boundary line. SVR chooses the  best fit line as the hyperplane that has a maximum number of points.\n",
+    "\n",
+    "The main aim is to decide a decision boundary at a distance from the original hyperplane such that data points closest to the hyperplane or the support vectors are within that boundary line.SVR takes only those points that are within the decision boundary and have the least error rate, or are within the Margin of Tolerance. This gives us a better fitting model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6198,12 +6209,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5.4.1. Building and fitting the model"
+    "#### Building and fitting the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6213,16 +6224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SVR(gamma='auto')"
+       "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='auto',\n",
+       "    kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 384,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6235,12 +6247,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5.4.2. Assess our results"
+    "#### Assess our results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [
     {
@@ -6260,12 +6272,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5.4.3. Making the prediction on the test data"
+    "### Making the prediction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6274,7 +6286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6286,7 +6298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6296,7 +6308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [
     {
@@ -6363,7 +6375,7 @@
        "4      5          7.054618"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 389,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6374,7 +6386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [],
    "source": [
