Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -6409,8 +6409,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Decesion Trees are like a flow-chart-like tree structure where the top of the tree(which is known as the root node) or internal node represents the feauture, the branch represents a decesion rule and each node represents the outcome. Decesion trees partition data into different sections on the basis of the attribute value. It partitions these in a recursive manner called recursive partitioning. The basic idea of a decesion tree algorithm is to select the b est attribute , make that attribute a decesion node and break it into smaller subsets. It then starts the tree building by repeating this process recursively for each child until certain conditions are met.The perfomance of the model is then evaluated. While decesion trees are good for feature engineering such as predicting missing values, they are quite biased and the small variation in the data can result in a different decesion tree but can be reduced by boosting algorithms seen below in the notebook:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6427,7 +6434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6437,16 +6444,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DecisionTreeRegressor(max_depth=3)"
+       "DecisionTreeRegressor(criterion='mse', max_depth=3, max_features=None,\n",
+       "                      max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "                      min_impurity_split=None, min_samples_leaf=1,\n",
+       "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "                      presort=False, random_state=None, splitter='best')"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 404,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6472,14 +6483,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE:  1.534800257172899\n"
+      "RMSE:  1.5348002571728983\n"
      ]
     }
    ],
@@ -6492,12 +6503,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The RMSE for the Decision Tree model is higher than the RMSE. This shows that the residuals for the Decision Tree model are more  spread out."
+    "The RMSE for the Decesion Tree model is higher than the RMSE. This shows that the residuals for the Decesion tree model are more  spread out."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6509,17 +6520,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Putting the predictions with the index in a DataFrame\n",
-    "DT_submission_DF = pd.DataFrame({'Index':index_list, 'avg_price_per_kg': y_submission})"
+    "c_submission = sv_reg_train.predict(test_submission_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 408,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Putting the predictions with the index in a DataFrame\n",
+    "DT_submission_DF = pd.DataFrame({'Index':index_list, 'avg_price_per_kg': c_submission})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
@@ -6551,27 +6571,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>8.788168</td>\n",
+       "      <td>4.566176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>9.139664</td>\n",
+       "      <td>7.930378</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>8.428122</td>\n",
+       "      <td>6.140307</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>7.708810</td>\n",
+       "      <td>8.608985</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>8.301543</td>\n",
+       "      <td>7.054618</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -6579,14 +6599,14 @@
       ],
       "text/plain": [
        "   Index  avg_price_per_kg\n",
-       "0      1          8.788168\n",
-       "1      2          9.139664\n",
-       "2      3          8.428122\n",
-       "3      4          7.708810\n",
-       "4      5          8.301543"
+       "0      1          4.566176\n",
+       "1      2          7.930378\n",
+       "2      3          6.140307\n",
+       "3      4          8.608985\n",
+       "4      5          7.054618"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 409,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6597,7 +6617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
@@ -6627,9 +6647,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>155</th>\n",
-       "      <td>156</td>\n",
-       "      <td>10.536846</td>\n",
+       "      <th>161</th>\n",
+       "      <td>162</td>\n",
+       "      <td>9.388631</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -6637,10 +6657,10 @@
       ],
       "text/plain": [
        "     Index  avg_price_per_kg\n",
-       "155    156         10.536846"
+       "161    162          9.388631"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 410,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6651,7 +6671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [
     {
@@ -6681,9 +6701,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>186</td>\n",
-       "      <td>0.249861</td>\n",
+       "      <th>181</th>\n",
+       "      <td>182</td>\n",
+       "      <td>1.791442</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -6691,10 +6711,10 @@
       ],
       "text/plain": [
        "     Index  avg_price_per_kg\n",
-       "185    186          0.249861"
+       "181    182          1.791442"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 411,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6705,43 +6725,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Creating an index list\n",
-    "index_list = []\n",
-    "for i in range(1,686):\n",
-    "    index_list.append(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Putting the predictions with the index in a DataFrame\n",
-    "DT_submission_DF = pd.DataFrame({'Index':index_list, 'avg_price_per_kg': y_submission})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Saving the DataFrame as as csv\n",
-    "DT_submission_DF.to_csv(r'DT_submission_DF.csv', index = False)"
+    "DT_submission_DF.to_csv(r'DT_submission.csv', index = False)"
    ]
   },
   {
