--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -7163,6 +7163,294 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 5.7 Adaboost Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 417,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load libraries\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn import datasets\n",
+    "# Import train_test_split function\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "#Import scikit-learn metrics module for accuracy calculation\n",
+    "from sklearn import metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 418,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import AdaBoostRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 419,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate decision tree regression model to use as the base model\n",
+    "d_tree = DecisionTreeRegressor(max_depth=3)\n",
+    "# Instantiate AdaBoostRegressor model with a decision tree as the base model\n",
+    "bst_reg = AdaBoostRegressor(base_estimator = d_tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 420,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AdaBoostRegressor(base_estimator=DecisionTreeRegressor(criterion='mse',\n",
+       "                                                       max_depth=3,\n",
+       "                                                       max_features=None,\n",
+       "                                                       max_leaf_nodes=None,\n",
+       "                                                       min_impurity_decrease=0.0,\n",
+       "                                                       min_impurity_split=None,\n",
+       "                                                       min_samples_leaf=1,\n",
+       "                                                       min_samples_split=2,\n",
+       "                                                       min_weight_fraction_leaf=0.0,\n",
+       "                                                       presort=False,\n",
+       "                                                       random_state=None,\n",
+       "                                                       splitter='best'),\n",
+       "                  learning_rate=1.0, loss='linear', n_estimators=50,\n",
+       "                  random_state=None)"
+      ]
+     },
+     "execution_count": 420,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bst_reg.fit(X_train.values,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 421,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 422,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import BaggingRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 423,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_tree = DecisionTreeRegressor(max_depth=4)\n",
+    "# Instantiate BaggingRegressor model with a decision tree as the base model\n",
+    "bag_reg = BaggingRegressor(base_estimator = d_tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 424,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_scaler = StandardScaler()\n",
+    "y_scaler = StandardScaler()\n",
+    "\n",
+    "# Normalise X and y\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 425,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BaggingRegressor(base_estimator=DecisionTreeRegressor(criterion='mse',\n",
+       "                                                      max_depth=4,\n",
+       "                                                      max_features=None,\n",
+       "                                                      max_leaf_nodes=None,\n",
+       "                                                      min_impurity_decrease=0.0,\n",
+       "                                                      min_impurity_split=None,\n",
+       "                                                      min_samples_leaf=1,\n",
+       "                                                      min_samples_split=2,\n",
+       "                                                      min_weight_fraction_leaf=0.0,\n",
+       "                                                      presort=False,\n",
+       "                                                      random_state=None,\n",
+       "                                                      splitter='best'),\n",
+       "                 bootstrap=True, bootstrap_features=False, max_features=1.0,\n",
+       "                 max_samples=1.0, n_estimators=10, n_jobs=None, oob_score=False,\n",
+       "                 random_state=None, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 425,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bag_reg.fit(X_train.values,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 430,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE:  1.4015551312320458\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = bst_reg.predict(X_test)\n",
+    "print(\"RMSE: \", np.sqrt(mean_squared_error(y_test,y_pred)))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 431,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating an index list\n",
+    "index_list = []\n",
+    "for i in range(1,686):\n",
+    "    index_list.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 432,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K_submission = sv_reg_train.predict(test_submission_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 435,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Putting the predictions with the index in a DataFrame\n",
+    "Ada_submission_DF = pd.DataFrame({'Index':index_list, 'avg_price_per_kg': K_submission})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 436,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Index</th>\n",
+       "      <th>avg_price_per_kg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.566176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>7.930378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6.140307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>8.608985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>7.054618</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Index  avg_price_per_kg\n",
+       "0      1          4.566176\n",
+       "1      2          7.930378\n",
+       "2      3          6.140307\n",
+       "3      4          8.608985\n",
+       "4      5          7.054618"
+      ]
+     },
+     "execution_count": 436,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ada_submission_DF.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 437,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ada_submission_DF.to_csv(r'DT_submission.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 7. Conclusion <a name=\"conclude\"></a>"
    ]
   },
