--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -5220,7 +5220,7 @@
    "metadata": {},
    "source": [
     "## 5. Building the regression models <a name=\"regress\"></a>\n",
-    "### 5.1. Method 1: A simple linear reggression model following the Least Squares Method\n",
+    "### 5.1.A simple linear reggression model following the Least Squares Method\n",
     "#### 5.1.1. Calculating the slope and the intercept "
    ]
   },
@@ -5440,7 +5440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.2. Method 2: A multivariate linear regression model using sklearn Linear Regression"
+    "### 5.2. A multivariate linear regression model using sklearn Linear Regression"
    ]
   },
   {
@@ -5781,7 +5781,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.3. Method 3: A multivariate linear regression model using statsmodels"
+    "### 5.3. A multivariate linear regression model using statsmodels"
    ]
   },
   {
@@ -6273,7 +6273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Making the prediction"
+    "#### Making predictions"
    ]
   },
   {
@@ -6734,7 +6734,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.6 Ensemble model: Voting"
+    "## 5.6. Ensemble model: Voting"
    ]
   },
   {
@@ -6962,7 +6962,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5.7 Random Forest"
+    "### 5.7. Random Forest"
    ]
   },
   {
@@ -7160,7 +7160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.7 Adaboost Classifier"
+    "### 5.7. Adaboost Classifier"
    ]
   },
   {
@@ -7421,7 +7421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Conclusion <a name=\"conclude\"></a>"
+    "## 6. Conclusion <a name=\"conclude\"></a>"
    ]
   },
   {
