Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -5788,6 +5788,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 5.3.1. Description of the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The Ordinary Least Squares Model is a statistical method of analysis that estimates the relationship between one or more indepedent variables and a dependent variable.The model estimates this relationship by minimizing the difference between the observed values and the predicted values.This difference is a representation of how far our predictions are to the information in our data, this difference is called the Residual Sum of Squares. The lower the Residual Sum of Squares is, the closer our predictions are to the truth displayed in our data. The metric that will be used in this model to assess how far our predictions deviate from the observed data is called the Root Mean Square error, which is the stanadard deviation of the residuals."
    ]
   },
@@ -5795,7 +5802,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Build and train the model"
+    "#### 5.3.2. Building and training the model"
    ]
   },
   {
@@ -6487,7 +6494,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE:  1.5162249190301789\n"
+      "RMSE:  1.516224919030179\n"
      ]
     }
    ],
@@ -6801,7 +6808,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE:  1.2763711243055285\n"
+      "RMSE:  1.2763711243055287\n"
      ]
     }
    ],
@@ -6974,7 +6981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -6983,7 +6990,7 @@
        "RandomForestRegressor(max_depth=45, n_estimators=2500)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6998,14 +7005,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 0.3998837297745265\n"
+      "RMSE: 0.39966887859916567\n"
      ]
     }
    ],
@@ -7100,27 +7107,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>9.901952</td>\n",
+       "      <td>9.600324</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>9.201428</td>\n",
+       "      <td>8.930456</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>10.030456</td>\n",
+       "      <td>10.072752</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>8.089628</td>\n",
+       "      <td>8.405228</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>7.958664</td>\n",
+       "      <td>7.872568</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -7128,11 +7135,11 @@
       ],
       "text/plain": [
        "   Index  avg_price_per_kg\n",
-       "0      1          9.901952\n",
-       "1      2          9.201428\n",
-       "2      3         10.030456\n",
-       "3      4          8.089628\n",
-       "4      5          7.958664"
+       "0      1          9.600324\n",
+       "1      2          8.930456\n",
+       "2      3         10.072752\n",
+       "3      4          8.405228\n",
+       "4      5          7.872568"
       ]
      },
      "execution_count": 131,
@@ -7289,7 +7296,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE:  1.398092794279961\n"
+      "RMSE:  1.384770176992012\n"
      ]
     }
    ],
