Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -3232,6 +3232,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = train_after_variance_thresholding"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 50,
    "metadata": {
     "scrolled": true
@@ -3650,7 +3659,16 @@
    },
    "outputs": [],
    "source": [
-    "# We did not apply variance thresholding to the testing set either. So we did not use test_submission_set = test_submission_set.loc[:,X_scaled.columns]"
+    "# We did not apply variance thresholding to the testing set either. So we did not use "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_submission_set = test_submission_set.loc[:,X_scaled.columns]"
    ]
   },
   {
